Change User Porto Data

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="hero-info">
                     <div class="info-item">
                         <span class="info-label">Program Studi</span>
-                        <span class="info-value">Teknik Informatika</span>
+                        <span class="info-value">Informatika</span>
                     </div>
                     <div class="info-item">
                         <span class="info-label">Fakultas</span>
@@ -58,7 +58,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-wrapper">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop&crop=faces"
+                    <img src="bayu.jpeg"
                         alt="Bayu Slamet Hidayat" class="profile-img">
                     <div class="image-decoration"></div>
                 </div>
@@ -160,9 +160,9 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <span class="timeline-period">2021 - Present</span>
-                        <h3 class="timeline-title">Sarjana Teknik Informatika</h3>
-                        <p class="timeline-subtitle">Universitas Indonesia - Fakultas Ilmu Komputer</p>
+                        <span class="timeline-period">2024 - Present</span>
+                        <h3 class="timeline-title">Sarjana Informatika</h3>
+                        <p class="timeline-subtitle">Universitas Siliwangi - Fakultas Teknik</p>
                         <p class="timeline-desc">Fokus pada pengembangan software, algoritma, dan kecerdasan buatan.
                             IPK: 3.85/4.00</p>
                     </div>
@@ -180,7 +180,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <span class="timeline-period">2023</span>
+                        <span class="timeline-period">2026</span>
                         <h3 class="timeline-title">Machine Learning Specialization</h3>
                         <p class="timeline-subtitle">Coursera - Stanford University</p>
                         <p class="timeline-desc">Comprehensive course on supervised learning, neural networks, and deep
@@ -190,7 +190,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <span class="timeline-period">2023</span>
+                        <span class="timeline-period">2026</span>
                         <h3 class="timeline-title">Blockchain & Smart Contract Development</h3>
                         <p class="timeline-subtitle">Udemy - Ethereum Development Course</p>
                         <p class="timeline-desc">Learned Solidity programming, smart contract deployment, and DApp
@@ -200,7 +200,7 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <span class="timeline-period">2022</span>
+                        <span class="timeline-period">2026</span>
                         <h3 class="timeline-title">UI/UX Design Professional Certificate</h3>
                         <p class="timeline-subtitle">Google - via Coursera</p>
                         <p class="timeline-desc">User-centered design principles, prototyping, and usability testing
@@ -384,11 +384,6 @@
                         class="social-link">
                         <i class="fab fa-twitter"></i>
                         <span>Twitter</span>
-                    </a>
-                    <a href="https://dribbble.com/bayuslameth" target="_blank" rel="noopener noreferrer"
-                        class="social-link">
-                        <i class="fab fa-dribbble"></i>
-                        <span>Dribbble</span>
                     </a>
                 </div>
             </div>
